build-output-latest.txt
npm warn Unknown project config "network-timeout". This will stop working in the next major version of npm. See `npm help npmrc` for supported config options.
[36mvite v7.3.1 [32mbuilding client environment for production...[36m[39m
transforming...
Error processing file E:/melitech_crm/client/src/pages/CreateExpense.tsx: SyntaxError: Unexpected token (560:0)
    at constructor (E:\melitech_crm\node_modules\.pnpm\@babel+parser@7.29.0\node_modules\@babel\parser\lib\index.js:365:19)
    at TypeScriptParserMixin.raise (E:\melitech_crm\node_modules\.pnpm\@babel+parser@7.29.0\node_modules\@babel\parser\lib\index.js:6599:19)
    at TypeScriptParserMixin.unexpected (E:\melitech_crm\node_modules\.pnpm\@babel+parser@7.29.0\node_modules\@babel\parser\lib\index.js:6619:16)
    at TypeScriptParserMixin.parseExprAtom (E:\melitech_crm\node_modules\.pnpm\@babel+parser@7.29.0\node_modules\@babel\parser\lib\index.js:11442:22)
    at TypeScriptParserMixin.parseExprAtom (E:\melitech_crm\node_modules\.pnpm\@babel+parser@7.29.0\node_modules\@babel\parser\lib\index.js:4764:20)
    at TypeScriptParserMixin.parseExprSubscripts (E:\melitech_crm\node_modules\.pnpm\@babel+parser@7.29.0\node_modules\@babel\parser\lib\index.js:11081:23)
    at TypeScriptParserMixin.parseUpdate (E:\melitech_crm\node_modules\.pnpm\@babel+parser@7.29.0\node_modules\@babel\parser\lib\index.js:11066:21)
    at TypeScriptParserMixin.parseMaybeUnary (E:\melitech_crm\node_modules\.pnpm\@babel+parser@7.29.0\node_modules\@babel\parser\lib\index.js:11046:23)
    at TypeScriptParserMixin.parseMaybeUnary (E:\melitech_crm\node_modules\.pnpm\@babel+parser@7.29.0\node_modules\@babel\parser\lib\index.js:9837:18)
    at TypeScriptParserMixin.parseMaybeUnaryOrPrivate (E:\melitech_crm\node_modules\.pnpm\@babel+parser@7.29.0\node_modules\@babel\parser\lib\index.js:10899:61) {
  code: 'BABEL_PARSER_SYNTAX_ERROR',
  reasonCode: 'UnexpectedToken',
  loc: Position { line: 560, column: 0, index: 22583 },
  pos: 22583,
  syntaxPlugin: undefined
}
[32m[39m 1666 modules transformed.
 Build failed in 12.54s
error during build:
[vite:esbuild] Transform failed with 1 error:
E:/melitech_crm/client/src/pages/CreateExpense.tsx:560:0: ERROR: Unexpected "}"
file: E:/melitech_crm/client/src/pages/CreateExpense.tsx:560:0

Unexpected "}"
558 |      </ModuleLayout>
559 |    );
560 |  }
    |  ^
561 |  

    at failureErrorWithLog (E:\melitech_crm\node_modules\.pnpm\esbuild@0.27.3\node_modules\esbuild\lib\main.js:1467:15)
    at E:\melitech_crm\node_modules\.pnpm\esbuild@0.27.3\node_modules\esbuild\lib\main.js:736:50
    at responseCallbacks.<computed> (E:\melitech_crm\node_modules\.pnpm\esbuild@0.27.3\node_modules\esbuild\lib\main.js:603:9)
    at handleIncomingPacket (E:\melitech_crm\node_modules\.pnpm\esbuild@0.27.3\node_modules\esbuild\lib\main.js:658:12)
    at Socket.readFromStdout (E:\melitech_crm\node_modules\.pnpm\esbuild@0.27.3\node_modules\esbuild\lib\main.js:581:7)
    at Socket.emit (node:events:508:28)
    at addChunk (node:internal/streams/readable:559:12)
    at readableAddChunkPushByteMode (node:internal/streams/readable:510:3)
    at Readable.push (node:internal/streams/readable:390:5)
    at Pipe.onStreamRead (node:internal/stream_base_commons:189:23)
